# Engine

./: CMakeLists.txt  CommitMessage  Engine  test  test.cpp
Meshes/: Building1.mesh  Building2.mesh  Building3.mesh  Buildings.blend
Shaders/: AdjacentSetArrow.frag  AdjacentSetArrow.vert  ApplyStencil.comp  Basic.frag  Basic.vert  Blur.comp  Blur.frag  Blur.vert  Border.frag  Border.geom  Border.vert  Building.frag  Building.vert  BuildingShadow.vert  ClearColor.comp  ClimateAirParticles.frag  ClimateAirParticles.vert  ComputeClimate.comp  ComputeClimate2.comp  Displace.comp  ExtractNormals.comp  Foliage.frag  Foliage.vert  GenerateBiome.comp  GeneratePaper.comp  GenerateRelief.comp  GenerateStencil.comp  GenerateTerrain.comp  GenerateWaveNoise.comp  Glyph.frag  Glyph.vert  InterfaceSprite.frag  InterfaceSprite.vert  Land.frag  Land.vert  MarineEnclosure.frag  MarineEnclosure.vert  MenuBlockout.frag  MenuBlockout.vert  MenuPaper.frag  (+37 more)
Source/: Animation.cpp  Animation.hpp  AnimationEvent.cpp  AnimationEvent.hpp  AnimationProperty.cpp  AnimationProperty.hpp  Animator.cpp  Animator.hpp  AssetManager.cpp  AssetManager.hpp  Attribute.hpp  Buffer.cpp  Buffer.hpp  BufferManager.cpp  BufferManager.hpp  Camera.cpp  Camera.hpp  Conventions.cpp  Conventions.hpp  DataBuffer.cpp  DataBuffer.hpp  Delegate.cpp  Delegate.hpp  Element.cpp  Element.hpp  Engine.cpp  Engine.hpp  File.cpp  File.hpp  FileManager.cpp  FileManager.hpp  FrameBuffer.cpp  FrameBuffer.hpp  GameObject.cpp  GameObject.hpp  HeaderBuffer.cpp  HeaderBuffer.hpp  Image.cpp  Image.hpp  ImageProcessor.cpp  (+56 more)
(+108 files in other folders)
